@@ -1,3 +1,11 @@
+2006-01-04  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-find-toolbar.c: (set_focus_cb),
+	(ephy_find_toolbar_grab_focus), (ephy_find_toolbar_open),
+	(ephy_find_toolbar_close):
+
+	Fix warning when Ctrl-F while the find toolbar is already shown.
+
 2006-01-02  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* src/Makefile.am:
